# fastapiutils

./: .env.example  .gitignore  DEPENDENCIES_GUIDE.md  LICENSE  MANIFEST.in  README.md  USAGE.md  auth_utils.py  db_user.py  example.py  i18n.py  models.py  pyproject.toml  requirements.txt  setup.py  test_simple.py
backendutils/locales/: en.json
fastapiutils/: __init__.py  auth_manager.py  auth_service.py  config.py  customer_form_service.py  database.py  database_service.py  dependencies.py  email_verification.py  factory.py  fastapi_context.py  i18n.py  i18n_service.py  mail.py  mail_service.py  models.py  mysql_utils.py  requirements.sql  routers.py  stripe_service.py  user.sql  user_queries.py  user_validators.py  verification_queries.py
fastapiutils/config/: colors.json
fastapiutils/locales/: de.json  en.json
fastapiutils/routers/: __init__.py  auth.py  customer.py  stripe.py  token.py  user.py
fastapiutils/templates/: email_change_verification.html  email_verification.html  forgot_password_verification.html
locales/: de.json  en.json
routers/: auth.py  user.py
