[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapiutils"
version = "0.3.0"
authors = [
    {name = "Lukas Drothler", email = "lukas@drothler.dev"},
]
description = "FastAPI utilities for authentication, user management, mails, internationalization, Stripe payments and more"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.14",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.20",
    "mysql-connector-python>=9.3.0",
    "pydantic>=2.11.7",
    "PyJWT>=2.10.1",
    "python-dotenv>=0.19.0",
    "stripe>=12.3.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/LukasDrothler/fastapiutils"
Repository = "https://github.com/LukasDrothler/fastapiutils"
Issues = "https://github.com/LukasDrothler/fastapiutils/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapiutils*"]

[tool.setuptools.package-data]
fastapiutils = ["locales/*.json", "*.sql", "config/*.json", "templates/*.html"]
